scss/main.scss
@import '_reset';
@import '_base';
@import '_leaflet';
@import '_leaflet.label';

$minscreenwidth: 630pt;
$sidebarwidth: 420pt;
$sidebarwidthsmall: 320pt;
$buttondistance: 12pt;

@import '_sidebar';
@import '_map';
@import '_forcegraph';

.contenttoggle {
  z-index: 100;
  position: absolute;
  top: $buttondistance;
  right: $buttondistance;
}

.contenttoggle.next-graph:after {
  content: '\f341';
}

.contenttoggle.next-map:after {
  content: '\f203';
}

.content {
  position: fixed;
  width: 100%;
  height: 100vh;
}

.tabs {
  padding: 1em 0 0 !important;
  margin: 0;
  list-style: none;
  display: flex;
  font-family: Roboto;
  background: rgba(0, 0, 0, 0.02);
  box-shadow: 0px 0.5px 3px rgba(0, 0, 0, 0.16), 0px 0.5px 2px rgba(0, 0, 0, 0.24);
}

.tabs li {
  flex: 1 1 auto;
  text-transform: uppercase;
  text-align: center;
  padding: 0.5em 0.5em 1em;
  cursor: pointer;
  color: rgba(0, 0, 0, 0.5);
}

.tabs li:hover {
  color: #dc0067;
}

.tabs .visible {
  border-bottom: 2pt solid #dc0067;
  color: #dc0067;
}

.tab {
  display: none;
}

.tab.visible {
  display: block;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto Slab', serif;
  font-size: 11pt;
}

th.sort-header::selection {
  background: transparent;
}

th.sort-header {
  cursor: pointer;
}

table th.sort-header:after {
  font-family: "ionicons";
  padding-left: 0.25em;
  content: '\f10d';
  visibility: hidden;
}

table th.sort-header:hover:after {
  visibility: visible;
}

table th.sort-up:after, table th.sort-down:after, table th.sort-down:hover:after {
  visibility: visible;
  opacity: 0.4;
}

table th.sort-up:after {
  content: '\f104';
}

table.attributes th {
  text-align: left;
  font-weight: bold;
  vertical-align: top;
  padding-right: 1em;
  white-space: nowrap;
  line-height: 1.41em;
}

table.attributes td {
  text-align: left !important;
  width: 100%;
  line-height: 1.41em;
}

.sidebar {
  .infobox, .container {
    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.19), 0px 3px 6px rgba(0, 0, 0, 0.23);
    background: rgba(255, 255, 255, 0.9);
    border-radius: 2px;
  }

  p {
    line-height: 1.67em;
  }
}

.infobox .clients {
  font-family: "ionicons";
  color: #1566A9;
  word-spacing: -0.2em;
}

.infobox {
  position: relative;
  padding: 0.25em 0;
  margin-bottom: $buttondistance;

  img {
    max-width: 100%;
  }
}

button {
  -webkit-tap-highlight-color: transparent;
  font-family: "ionicons";
  box-shadow: 0px 0.5px 3px rgba(0, 0, 0, 0.16), 0px 0.5px 2px rgba(0, 0, 0, 0.24);
  border-radius: 0.9em;
  background: rgba(255, 255, 255, 0.7);
  border: none;
  cursor: pointer;
  height: 1.8em;
  width: 1.8em;
  font-size: 20pt;
  transition: box-shadow 0.5s, color 0.5s;
  outline: none;
}

button.active {
  color: #dc0067 !important;
}

button:hover {
  background: white;
  color: #dc0067;
  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.19), 0px 3px 6px rgba(0, 0, 0, 0.23);
}

button:active {
  box-shadow: inset 0px 5px 20px rgba(0, 0, 0, 0.19), inset 0px 3px 6px rgba(0, 0, 0, 0.23);
}

button::-moz-focus-inner {
  border: 0;
}

button.close {
  width: auto;
  height: auto;
  font-size: 14pt;
  float: right;
  padding: $buttondistance/2 $buttondistance;
  margin-right: $buttondistance;
  margin-top: $buttondistance;
  box-shadow: none;
  background: transparent;
  border-radius: 0;
  color: rgba(0, 0, 0, 0.5);
  font-family: Roboto;

  &:hover {
    color: #dc0067;
  }

  &:active {
    background: rgba(0, 0, 0, 0.04);
  }

  &:after {
    content: "CLOSE";
  }
}

.sidebar h2, .sidebar h3 {
  padding-left: $buttondistance;
  padding-right: $buttondistance;
}

.sidebar {
  p, pre, ul, h4 {
    padding: 0 $buttondistance 1em;
  }

  table {
    padding: 0 $buttondistance;
  }
}

table {
  border-spacing: 0 0.5em;
  td, th {
    line-height: 1.41em;
  }
}

.sidebar table {
  border-collapse: separate;
}

.sidebar table th {
  font-weight: bold;
}

.sidebarhandle {
  position: fixed;
  left: $sidebarwidth + 2 * $buttondistance;
  top: $buttondistance;
  z-index: 10;
  transition: left 0.5s, box-shadow 0.5s, color 0.5s, transform 0.5s;
}

.sidebarhandle:after {
  padding-right: 0.125em;
  content: "\f124";
}

.sidebar.hidden .sidebarhandle {
  transform: scale(-1, 1);
  left: $buttondistance;
}

.online {
  color: #558020 !important;
}

.offline {
  color: #D43E2A !important;
}

.sidebar {
  z-index: 5;
  width: $sidebarwidth;
  box-sizing: border-box;
  position: absolute;
  top: $buttondistance;
  left: $buttondistance;
  margin-bottom: $buttondistance;
  transition: left 0.5s;
}

.sidebar.hidden {
  left: -$sidebarwidth - $buttondistance;
}

.sidebar .icon {
  padding: 0 0.25em;
}

.sidebar table {
  width: 100%;
}

.sidebar table th {
  text-align: left;
}

.sidebar td:not(:first-child), .sidebar th:not(:first-child) {
  text-align: right;
  white-space: nowrap;
}

.sidebar a {
  color: #1566A9;
}

.bar {
  display: block;
  height: 1.4em;
  background: rgba(85, 128, 32, 0.5);
  position: relative;

  span {
    display: inline-block;
    height: 1.4em;
    background: rgba(85, 128, 32, 0.8);
  }

  label {
    font-weight: bold;
    white-space: nowrap;
    color: white;
    position: absolute;
    right: 0.5em;
    top: 0.1em;
  }
}

.proportion th {
  font-weight: normal !important;
  text-align: right !important;
  font-size: 0.95em;
  padding-right: 0.71em;
}

.proportion td {
  text-align: left !important;
  width: 100%;
}

.proportion td, .proportion th {
  white-space: nowrap;
}

.proportion span {
  display: inline-block;
  background: black;
  padding: 0.25em 0.5em;
  font-weight: bold;
  min-width: 1.5em;
  box-sizing: border-box;
}

@media screen and (max-width: 80em) {
  .sidebar {
    font-size: 0.8em;
    top: 0pt;
    left: 0pt;
    margin: 0pt;
    width: $sidebarwidthsmall;
    min-height: 100vh;
    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.19), 0px 3px 6px rgba(0, 0, 0, 0.23);
    background: white;

    .sidebarhandle {
      left: $sidebarwidthsmall + $buttondistance;
    }

    .container, .infobox {
      margin: 0;
      box-shadow: none;
      border-radius: 0;
    }

    .infobox {
      background: rgba(0, 0, 0, 0.02);
    }
  }
}

@media screen and (max-width: $minscreenwidth) {
  .sidebarhandle {
    display: none;
  }

  .content {
    position: relative;
    width: auto;
    height: 60vh;
  }

  .sidebar {
    position: static;
    margin: 0em !important;
    width: auto;
    height: auto;
    min-height: 0;
  }

  .sidebar.hidden {
    width: auto;
  }
}

